syntax = "proto3";

message NodeProcess {
    string pid = 1;
    string port = 2;
    string userId = 3;
}

service NodeService {
    rpc NewProcess (Empty) returns (NodeProcess) {}
    rpc NewProcessForClient (Empty) returns (NodeProcess) {}
    rpc KillProcess (NodeProcessId) returns (Empty) {}
    rpc KillAll (Empty) returns (Empty){}

}

message NodeProcessId {
    string id = 1;
}

message Empty {}
